--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -19,13 +19,6 @@ body {
 .container {
   width: $container-width;
   margin: 0 auto;
-
-  &--cart {
-    max-width: 820px;
-    margin: 30px auto;
-    .content__title {
-      margin: 0;
-    }
-  }
+  margin-top: 30px;
 }
 
