[add] - добавил стили для карточек

--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'Proxima Nova';
+  font-family: 'Titillium Web';
   src: url('./fonts/TitilliumWeb-Black.eot');
   src: local('./fonts/Titillium Web Black'), local('TitilliumWeb-Black'),
     url('./fonts/TitilliumWeb-Black.eot?#iefix') format('embedded-opentype'),
@@ -10,7 +10,7 @@
 }
 
 @font-face {
-  font-family: 'Proxima Nova';
+  font-family: 'Titillium Web';
   src: url('./fonts/TitilliumWeb-Bold.eot');
   src: local('./fonts/Titillium Web Bold'), local('TitilliumWeb-Bold'),
     url('./fonts/TitilliumWeb-Bold.eot?#iefix') format('embedded-opentype'),
@@ -21,7 +21,7 @@
 }
 
 @font-face {
-  font-family: 'Proxima Nova';
+  font-family: 'Titillium Web';
   src: url('./fonts/TitilliumWeb-Regular.eot');
   src: local('./fonts/Titillium Web Regular'), local('TitilliumWeb-Regular'),
     url('./fonts/TitilliumWeb-Regular.eot?#iefix') format('embedded-opentype'),
